processed/gerrit/txt_full/33149.txt
Change:     33149
Subject:    LU-10394 lnd: default to using MEM_REG
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/33149
Change-Id:  I08a8b72756b9b5b5bcb391bf3e979f6d28eb5cbb
Project:    fs/lustre-release
Branch:     b2_10
Status:     ABANDONED
Owner:      Minh Diep
Created:    2018-09-12 14:24:16.000000000
Updated:    2022-04-28 21:45:35.000000000
Patch Set:  1
Insertions: +9
Deletions:  -0
Comments:   2 (0 unresolved)

--- Reviewers ---
  REVIEWER: Jenkins, Amir Shehata, Doug Oucharek

--- Commit Message ---
LU-10394 lnd: default to using MEM_REG

There is a performance drop when using IB_MR_TYPE_SG_GAPS. To
mitigate this, we added a module parameter, use_fastreg_gaps, which
defaults to 0. When allocating the memory region if this parameter
is set to 1 and the hw has gaps support then use it and output
a warning that performance may drop. Otherwise always use
IB_MR_TYPE_MEM_REG.

Test-Parameters: trivial

Lustre-change: https://review.whamcloud.com/30749
Lustre-commit: 27116ee18c04057936837f6f0aef3f4c09c21d78

Signed-off-by: Amir Shehata <amir.shehata@intel.com>
Change-Id: I08a8b72756b9b5b5bcb391bf3e979f6d28eb5cbb
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Doug Oucharek <dougso@me.com>
Signed-off-by: Minh Diep <mdiep@whamcloud.com>

--- Review History ---

--- Message (Minh Diep, 2018-09-12 14:24:16.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2018-09-12 14:27:32.000000000) ---
Patch Set 1:

(2 comments)

2 style warning(s).
For more details please see https://wiki.hpdd.intel.com/display/PUB/Coding+Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-09-12 14:32:40.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/smt/git/lustre-release/lnet/klnds/o2iblnd/o2iblnd.c: In function ‘kiblnd_alloc_freg_pool’:
 /home/green/smt/git/lustre-release/lnet/klnds/o2iblnd/o2iblnd.c:1583:8: error: ‘dev_caps’ undeclared (first use in this function)
        (dev_caps & IBLND_DEV_CAPS_FASTREG_GAPS_SUPPORT))
         ^
 /home/green/smt/git/lustre-release/lnet/klnds/o2iblnd/o2iblnd.c:1583:8: note: each undeclared identifier is reported only once for each function it appears in
 /home/green/smt/git/lustre-release/lnet/klnds/o2iblnd/o2iblnd.c:1583:19: error: ‘IBLND_DEV_CAPS_FASTREG_GAPS_SUPPORT’ undeclared (first use in this function)
        (dev_caps & IBLND_DEV_CAPS_FASTREG_GAPS_SUPPORT))
                    ^

--- Message (Jenkins, 2018-09-12 14:43:56.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/611/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/58574/ : FAILURE

--- Message (Doug Oucharek, 2018-09-12 17:00:24.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Andreas Dilger, 2022-04-28 21:45:35.000000000) ---
Abandoned

Abandon old patches on b2_10.
